# haptic_vision

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  req_files.sh  yolov5s.torchscript.pt
Documentation/: Camera_Case v1.stl
Housekeeping/: Material List RTEP.xlsx  README.md
app/src/: main.cpp  main_old.cpp
docs/: DoxyREADME.md  Doxyfile
docs/html/: CameraCapture_8cpp.html  CameraCapture_8cpp__incl.map  CameraCapture_8cpp__incl.md5  CameraCapture_8h.html  CameraCapture_8h__dep__incl.map  CameraCapture_8h__dep__incl.md5  CameraCapture_8h__incl.map  CameraCapture_8h__incl.md5  CameraCapture_8h_source.html  GPIOController_8cpp.html  GPIOController_8cpp__incl.map  GPIOController_8cpp__incl.md5  GPIOController_8h.html  GPIOController_8h__dep__incl.map  GPIOController_8h__dep__incl.md5  GPIOController_8h__incl.map  GPIOController_8h__incl.md5  GPIOController_8h_source.html  ObstacleDetector_8cpp.html  ObstacleDetector_8cpp__incl.map  ObstacleDetector_8cpp__incl.md5  ObstacleDetector_8h.html  ObstacleDetector_8h__dep__incl.map  ObstacleDetector_8h__dep__incl.md5  ObstacleDetector_8h__incl.map  ObstacleDetector_8h__incl.md5  ObstacleDetector_8h_source.html  Yolo_8cpp.html  Yolo_8cpp__incl.map  Yolo_8cpp__incl.md5  Yolo_8h.html  Yolo_8h__dep__incl.map  Yolo_8h__dep__incl.md5  Yolo_8h__incl.map  Yolo_8h__incl.md5  Yolo_8h_source.html  annotated.html  classCameraCapture-members.html  classCameraCapture.html  classGPIOController-members.html  (+39 more)
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  pages_0.js  pages_1.js  pages_2.js  pages_4.js  searchdata.js
docs/latex/: CameraCapture_8cpp.tex  CameraCapture_8cpp__incl.md5  CameraCapture_8h.tex  CameraCapture_8h__dep__incl.md5  CameraCapture_8h__incl.md5  GPIOController_8cpp.tex  GPIOController_8cpp__incl.md5  GPIOController_8h.tex  GPIOController_8h__dep__incl.md5  GPIOController_8h__incl.md5  ObstacleDetector_8cpp.tex  ObstacleDetector_8cpp__incl.md5  ObstacleDetector_8h.tex  ObstacleDetector_8h__dep__incl.md5  ObstacleDetector_8h__incl.md5  Yolo_8cpp.tex  Yolo_8cpp__incl.md5  Yolo_8h.tex  Yolo_8h__dep__incl.md5  Yolo_8h__incl.md5  annotated.tex  classCameraCapture.tex  classGPIOController.tex  classObstacleDetector.tex  classYolo.tex  dir_00b1c0bea6b3966d058d17a58090a0bc.tex  dir_1123663c55a1f95c160aad937b3f69b6.tex  dir_178bc4c3058c4825b6d66582602a2def.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_97aefd0d527b934f1d99a682da8fe6a9.tex  dir_ce752014152a5a8a46d2f48bb2d8f9a7.tex  files.tex  index.tex  main_8cpp.tex  main_8cpp__incl.md5  md__home_joseph_hviz_joel_ss_README.tex  md__home_joseph_hviz_joel_ss_extras_CAD_files_README.tex  md__home_joseph_hviz_joel_ss_extras_Documentation_README.tex  md__home_joseph_hviz_joel_ss_extras_Electronics_README.tex  (+4 more)
extras/CAD files/: Camera_Case_rev2.stl  Camera_Support_rev 2.stl  RBP_BASE rev2.stl  RBP_Cover rev2.stl  README.md
extras/Documentation/: Camera_Support v2.stl  RBP_BASE v2.stl  RBP_Cover.stl  README.md
extras/Electronics/: README.md
extras/General/: README.md
extras/Socials/: README.md
lib/camera/: CameraCapture.cpp  CameraCapture.h  test_CameraCapture.cpp
lib/gpio_controller/: GPIOController.cpp  GPIOController.h
lib/object_detection/: ObjectDetection.cpp  ObjectDetection.h
lib/obstacle_detector/: ObstacleDetector.cpp  ObstacleDetector.h  test_ObstacleDetector.cpp
lib/yolo/: Yolo.cpp  Yolo.h  test_Yolo.cpp  yolo
libtorch/include/ATen/: Config.h
libtorch/include/caffe2/core/: macros.h
libtorch/share/cmake/Caffe2/: Caffe2Targets.cmake
libtorch/share/cmake/Torch/: TorchConfig.cmake
libtorch/test/: AlgorithmsTest  BinaryMatchImplTest  CppSignature_test  Dict_test  Dimname_test  GraphTest  KernelFunction_test  List_test  MatchTest  NamedTensor_test  NeuralNetTest  SubgraphMatcherTest  TarjansImplTest  TensorImpl_test  TopoSortTest  apply_utils_test  atest  backend_cutting_test  backend_fallback_test  basic  batch_matmul_op_test  blob_test  boolean_unmask_ops_test  bound_shape_inference_test  broadcast_test  c10_Array_test  c10_Bitset_test  c10_C++17_test  c10_CompileTimeFunctionPointer_test  c10_ConstexprCrc_test  c10_DeviceGuard_test  c10_DispatchKeySet_test  c10_Half_test  c10_InlineDeviceGuard_test  c10_InlineStreamGuard_test  c10_LeftRight_test  c10_Metaprogramming_test  c10_StreamGuard_test  c10_TypeIndex_test  c10_TypeList_test  (+102 more)
motor/: motor.cpp
src/: YOLOv5LibTorch.cpp  main.cpp
yolo/: yolo.cpp
